# pts

./: .gitignore  CMakeLists.txt  README
Plugins/: Base.pm  CompileTest.pm  Configuration.pm  CountFiles.pm  Parallel.pm  PluginHelp.pm  Sequential.pm  TestPlugin.pm
doc/: make_doc.bat
doc/html/: Task.html  TaskDB.html  index.html
doc/html/Plugins/: Base.html
doc/html/Task/: ID.html
doc/html/modules/: MyConsoleColors.html  PtsColorScheme.html  Task.html  TaskDB.html
doc/styles/: style.css
examples/: .ptsconfig  pts  pts.bat  test_task2.set
examples/Plugins/: CompileTest.pm  CountFiles.pm
examples/tasks/: init_check_files.conf  task_4.conf  task_5.conf
modules/: CmdArgs.pm  ConfigFile.pm  ConfigFile.t  ConfigFileScheme.pm  ConfigFileScheme.t  Exceptions.pm  ForkedChild.pm  ForkedOutput.pm  InputFileStream.pm  MyConsoleColors.pm  ParallelWithForks.pm  ParallelWithMCE.pm  ParallelWithThreads.pm  PtsColorScheme.pm  PtsConfig.pm  Task.pm  TaskDB.pm  TasksOutput.pm  pts-main.pm  pts.pod
modules/CmdArgs/: BasicTypes.pm
modules/Exceptions/: Exception.pm  OpenFileError.pm  TextError.pm
modules/Plugins/: Base.pm
modules/Plugins/Base/: Util.pm
modules/Task/: ID.pm
modules/tests/: .ptsconfig  ConfigFile.t  ConfigFileScheme.t  Task.t  Task_ID.t  perf_Task_ID.t  pts  pts.bat  simple_1.conf  simple_2  task.set  test-pts.pl  tot
modules/tests/Plugins/: SeqTest.pm  Simple1.pm  Simple2.pm  TasksOutputTest.pm
modules/tests/output/: nested_taskset.txt  path_task.txt  path_task_set.txt  path_task_set_spec.txt  t1.txt  t2.txt  t_args.txt  (+3 more)
scripts/: CMakeLists.txt  pts.bat.in  pts.pl.in
tasks/: config.conf  end_parallel.conf  end_seq.conf  end_seq_seq.conf  help.conf  init_task_check_files.conf  parallel.conf  seq.conf  task_1.conf  task_2.conf  task_3.conf  task_check_files.conf
test/termination/: .ptsconfig  t.conf  test.set
utils/: add_to_path.bat  remove_from_path.bat
(+17 files in other folders)
